--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,26 @@
-{% block title %}User Profile{% endblock %}
+{% include "header.html" %}
+
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('../static/assets/img/home-bg.jpg')">
+  <div class="container position-relative px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-7 text-center">
+        <div class="site-heading">
+          {% if current_user.first_name %}
+            <h1>{{ current_user.first_name }}'s Blog</h1>
+          {% else %}
+            <h1>Blog Theme</h1>
+          {% endif %}
+          <span class="subheading">A Blog Theme by The Software Insight</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+
 
 {% block content %}
-<!-- Profile Page Styles -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
 <div class="container d-flex align-items-center justify-content-center min-vh-100 py-5">
@@ -36,7 +54,7 @@
                             {{ current_user.username or (current_user.first_name ~ ' ' ~ current_user.last_name) or 'User' }}
                         </h3>
                         <p class="user-email mb-3 text-muted">
-                            <i class="bi bi-envelope me-2"></i>{{ current_user.email or 'No email available' }}
+                            <i class="bi bi-envelope me-2"></i> {{ current_user.email or 'No email available' }}
                         </p>
 
                         {% if current_user.bio %}
