--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,5 @@
 {% include "header.html" %}
+{% block content %}
 
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('../static/assets/img/home-bg.jpg')">
@@ -20,7 +21,6 @@
 
 
 
-{% block content %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
 <div class="container d-flex align-items-center justify-content-center min-vh-100 py-5">
@@ -135,4 +135,5 @@
         </div>
     </div>
 </div>
+{% include "footer.html" %}
 {% endblock %}
