--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7 text-center">
         <div class="site-heading">
-          <h1 class="fw-semibold mb-2">Personalize Your Insight Hub Profile</h1>
+          <h1 class="fw-semibold mb-2">Update Avatar</h1>
           <span class="subheading text-muted">A Blog Theme by The Software Insight</span>
         </div>
       </div>
