fixing some miner issues

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,90 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>The Insight Hub</title>
     {% block styles %}
-    <!-- Load Bootstrap-Flask CSS here -->
     {{ bootstrap.load_css() }}
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
-    <!-- Font Awesome icons (free version)-->
-    <script
-            src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
-            crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link
-            href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
-            rel="stylesheet"
-            type="text/css"/>
-    <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-            rel="stylesheet"
-            type="text/css"/>
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link
-            href="{{ url_for('static', filename='css/styles.css') }}"
-            rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css"/>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     {% endblock %}
 </head>
 <body>
-<!-- Navigation-->
+<!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/"><img src="static/assets/img/logo-light.jpg" alt="" style="width: 100px; height: auto;"></a>
-        <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
+        <!-- Logo -->
+        <a class="navbar-brand" href="/">
+            <img src="{{ url_for('static', filename='assets/img/logo-light.jpg') }}" alt="Logo" style="width: 100px; height: auto;">
+        </a>
+
+        <!-- Toggle Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
+                aria-expanded="false" aria-label="Toggle navigation">
+            Menu <i class="fas fa-bars"></i>
         </button>
+
+        <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
                 <li class="nav-item">
-                    <a
-                            class="nav-link px-lg-3 py-3 py-lg-4"
-                            href="{{ url_for('get_all_posts') }}">Home</a>
+                    <a class="nav-link px-lg-3 py-3 py-lg-4"
+                       href="{{ url_for('get_all_posts') }}">Home</a>
                 </li>
-                <!-- : Only show Login/Register if user is logged out. Otherwise, show "Log Out" -->
-                {% if not current_user.is_authenticated: %}
+
                 <li class="nav-item">
-                    <a
-                            class="nav-link px-lg-3 py-3 py-lg-4"
-                            href="{{ url_for('login') }}">Login</a>
+                    <a class="nav-link px-lg-3 py-3 py-lg-4"
+                       href="{{ url_for('about') }}">About</a>
                 </li>
                 <li class="nav-item">
-                    <a
-                            class="nav-link px-lg-3 py-3 py-lg-4"
-                            href="{{ url_for('register') }}">Register</a>
+                    <a class="nav-link px-lg-3 py-3 py-lg-4"
+                       href="{{ url_for('contact') }}">Contact</a>
                 </li>
-                {% else: %}
-                <li class="nav-item">
-                    <a
-                        class="nav-link px-lg-3 py-3 py-lg-4"
-                        href="{{ url_for('logout') }}">Log Out</a>
-            </li>
+
+                {% if not current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link px-lg-3 py-3 py-lg-4"
+                           href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-lg-3 py-3 py-lg-4"
+                           href="{{ url_for('register') }}">Register</a>
+                    </li>
+                {% else %}
+                    <!-- Avatar with dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle px-lg-3 py-4 py-lg-4" href="#" id="userDropdown"
+                           role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {% if current_user.avatar_url %}
+                                <img src="{{ current_user.avatar_url }}" alt="avatar"
+                                     width="32" height="32" class="rounded-circle me-2">
+                            {% else %}
+                                <img src="{{ url_for('static', filename='assets/img/default-profile.jpg') }}"
+                                     alt="avatar" width="32" height="32" class="rounded-circle me-2">
+                            {% endif %}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                            <li><a class="dropdown-item"
+                                   href="{{ url_for('profile', user_id=current_user.id) }}">Profile</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item text-danger" href="{{ url_for('logout') }}">Logout</a></li>
+                        </ul>
+                    </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a
-                            class="nav-link px-lg-3 py-3 py-lg-4"
-                            href="{{ url_for('about') }}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a
-                            class="nav-link px-lg-3 py-3 py-lg-4"
-                            href="{{ url_for('contact') }}">Contact</a>
-                </li>
+
             </ul>
         </div>
     </div>
