--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,7 @@
     <div class="avatar-container d-inline-block position-relative">
         {% if current_user.avatar_url %}
             <!-- User uploaded profile image -->
-            <img src="{{ url_for('static', filename='assets/profile_pics/' + current_user.avatar_url) }}"
+            <img src="{{ url_for('static', filename='profile_pics/' + current_user.avatar_url) }}"
                  alt="{{ current_user.username or current_user.first_name }}"
                  class="avatar-img rounded-circle border border-3 border-light shadow"
                  style="width: 100px; height: 100px; object-fit: cover;">
