trying to fix x icon error in footer section

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,13 +2,6 @@
 <footer class="border-top mt-5 py-4 bg-light">
   <div class="container px-4 px-lg-5 text-center">
     <ul class="list-inline mb-3">
-<!--      <li class="list-inline-item mx-2">-->
-<!--        <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">-->
-<!--            <span class="fa-stack fa-lg"></span>-->
-<!--            <i class="fas fa-circle fa-stack-2x"></i>-->
-<!--            <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>-->
-<!--          </a>-->
-<!--          </li>-->
             <li class="list-inline-item mx-2">
             <a href="https://www.linkedin.com/in/mjeyz/" target="_blank" class="text-decoration-none text-dark">
               <span class="fa-stack fa-lg">
@@ -21,7 +14,7 @@
             <a href="https://x.com/MudasirAbbas0" target="_blank" class="text-decoration-none text-dark">
               <span class="fa-stack fa-lg">
               <i class="fas fa-circle fa-stack-2x"></i>
-              <i class="fab fa-x-twitter fa-stack-1x fa-inverse"></i>
+              <i class="fab fa-twitter-x fa-stack-1x fa-inverse"></i>
               </span>
             </a>
             </li>
@@ -61,6 +54,8 @@
 
 <!-- Core theme JS -->
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
+
 
 <script>
   document.getElementById('currentYear').textContent = new Date().getFullYear();
