--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
     <!-- Font Awesome JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js" crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css"/>
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
@@ -60,15 +60,12 @@
                 {% else %}
                     <!-- Avatar with dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle px-lg-3 py-4 py-lg-4" href="#" id="userDropdown"
+                        <a class="nav-link dropdown-toggle px-lg-3 py-4 py-lg-4 d-flex align-items-center" href="#" id="userDropdown"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            {% if current_user.avatar_url %}
-                                <img src="{{ current_user.avatar_url }}" alt="avatar"
-                                     width="32" height="32" class="rounded-circle me-2">
-                            {% else %}
-                                <img src="{{ url_for('static', filename='assets/img/default-profile.jpg') }}"
-                                     alt="avatar" width="32" height="32" class="rounded-circle me-2">
-                            {% endif %}
+                            <!-- ✅ Fixed Gravatar integration -->
+                            <img src="{{ current_user.email | gravatar(size=50) }}"
+                                 alt="avatar"
+                                 width="32" height="32" class="rounded-circle me-2 border border-2">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                             <li><a class="dropdown-item"
@@ -78,7 +75,6 @@
                         </ul>
                     </li>
                 {% endif %}
-
             </ul>
         </div>
     </div>
